--- a/src/main/resources/zenit/settingspanel/settingspanelDarkMode.css
+++ b/src/main/resources/zenit/settingspanel/settingspanelDarkMode.css
@@ -83,12 +83,8 @@
 	-fx-background-color: #444444;
 }
 
-#pnlTheme #lblDarkModeTxt {
-	-fx-text-fill: #222222;
-}
 
 #lblDarkMode {
-	-fx-text-fill: #222222;
 	-fx-font-size: 16px;
 }
 
@@ -111,10 +107,9 @@
 #lblAddCustomCssLines {
 	-fx-text-fill: #EEEEEE;
 }
-#fldCustomCSSInput {
-	-fx-background-color: #444444;
-	-fx-border-color: rgba(255,255,255,0.4);
-	-fx-text-fill: #009911;
+#textAreaCustomCSSInput .content {
+	-fx-control-inner-background: transparent;
+	-fx-background-color: #555555;
 }
 
 #scrollPaneAddedCSS{
