--- a/customtheme/settingspanelCustomTheme.css
+++ b/customtheme/settingspanelCustomTheme.css
@@ -3,38 +3,38 @@
 }
 
 #spAnchorPane {
-	-fx-background-color: #800080;
+	-fx-background-color: #336633;
 	-fx-padding: 0.0;
 	-fx-background-insets: 0.0, 0.0;
   	-fx-border-width: 0.0;
-  	-fx-background-color: #800080;
+  	-fx-background-color: #336633;
 }
 
 #spAnchorPane .button {
-	-fx-background-color: #CCCC66;
-	-fx-text-fill: #CCFFCC;
+	-fx-background-color: #003300;
+	-fx-text-fill: #FFCCB3;
 }
 
 #mainAnchorPane {
-	-fx-background-color: #800080;
+	-fx-background-color: #336633;
 		-fx-border-width: 0.0;
 }
 
 /* Text Appearance pane */
 #pnlTextAppearance {
-	-fx-background-color: #800080;
-	-fx-text-fill: #CCFFCC;
+	-fx-background-color: #336633;
+	-fx-text-fill: #FFCCB3;
 }
 
 #pnlTextAppearance .label {
-	-fx-text-fill: #CCFFCC;
+	-fx-text-fill: #FFCCB3;
 }
 
 #pnlTextAppearance #lblTxtAppeaSize {
-	-fx-text-fill: #00FF00;
+	-fx-text-fill: #FFCC66;
 }
 #pnlTextAppearance #lblTxtAppeaFont {
-	-fx-text-fill: #00FF00;
+	-fx-text-fill: #FFCC66;
 }
 
 #chcbxNewFont {
@@ -43,7 +43,7 @@
 }
 
 #chcbxNewFont .context-menu {	
-	-fx-background-color: #800080;
+	-fx-background-color: #336633;
 }
 
 #chcbxNewFont .menu-item:focused {
@@ -51,16 +51,16 @@
 }
 
 #chcbxNewFont .menu-item > .label {
-	-fx-text-fill: #CCFFCC;
+	-fx-text-fill: #FFCCB3;
 }
 
 #chcbxNewFont > .label {
-	-fx-text-fill: #CCFFCC;
+	-fx-text-fill: #FFCCB3;
 }
  
 #fldNewSize {
  	-fx-background-color: rgba(100,100,100,0.4);
- 	-fx-text-fill: #CCFFCC;
+ 	-fx-text-fill: #FFCCB3;
  }
  
 #sldrNewSize > .track {	
@@ -70,17 +70,17 @@
  
  /* Java Home pane */
 #pnlJavaHome {
-	-fx-background-color: #800080;
+	-fx-background-color: #336633;
 }
 
 #pnlJavaHome .label {
-	-fx-text-fill: #CCFFCC;
+	-fx-text-fill: #FFCCB3;
 }
 
 /* Theme pane */
 
 #pnlTheme {
-	-fx-background-color: #800080;
+	-fx-background-color: #336633;
 }
 
 #pnlTheme #lblDarkModeTxt {
@@ -106,38 +106,38 @@
 
 /* Custom CSS pane */
 #pnlCustomCSS {
-	-fx-background-color: #800080;
+	-fx-background-color: #336633;
 }
 #lblAddCustomCssLines {
-	-fx-text-fill: #CCFFCC;
+	-fx-text-fill: #FFCCB3;
 }
 #fldCustomCSSInput {
-	-fx-background-color: #800080;
+	-fx-background-color: #336633;
 	-fx-border-color: rgba(255,255,255,0.4);
 	-fx-text-fill: #009911;
 }
 
 #scrollPaneAddedCSS{
-	  -fx-background-color: #800080;
+	  -fx-background-color: #336633;
 	  -fx-border-color: transparent;
 }
 
 #listViewAddedCSS {
-	 -fx-background-color: #800080;
+	 -fx-background-color: #336633;
 	 -fx-border-color: transparent;
 }
 #listViewAddedCSS .list-cell { 
-	-fx-background-color: #800080; /* 5 */
-	-fx-text-fill: #CCFFCC;
+	-fx-background-color: #336633; /* 5 */
+	-fx-text-fill: #FFCCB3;
 	
 }
 
 #listViewAddedCSS .list-cell:even {
-	 -fx-background-color: #CCCC66;
+	 -fx-background-color: #003300;
 }
 
 #scrollPaneAddedCSS .scroll-pane {
-    -fx-background-color: #800080;
+    -fx-background-color: #336633;
 }
 
 #scrollPaneAddedCSS .scroll-bar:vertical{
@@ -150,7 +150,7 @@
 }
 
 #scrollPaneAddedCSS .scroll-bar:vertical .thumb {
-    -fx-background-color: #CCFFCC;
+    -fx-background-color: #FFCCB3;
     -fx-background-radius: 5em;
 }
 
@@ -165,7 +165,7 @@
 }
 
 .lblCSSText {
-	-fx-text-fill: #CCFFCC;
+	-fx-text-fill: #FFCCB3;
 }
 
 #btnRemoveCSS {
@@ -183,7 +183,7 @@
 }
 
 #btnAddCSSLine {
-	-fx-background-color: #CCCC66;
+	-fx-background-color: #003300;
 	-fx-text-fill: #FFFFFF;
 }
 
@@ -193,7 +193,7 @@
  * 
  */
  #pnlCustomTheme {
-	-fx-background-color: #800080;
+	-fx-background-color: #336633;
 }
 
  #pnlCustomTheme .color-picker {
@@ -203,21 +203,21 @@
  
  #pnlCustomTheme .color-picker .color-picker-label{
 
--fx-text-fill: #CCFFCC;
+-fx-text-fill: #FFCCB3;
 }
 
 .lblMainColor {
-	-fx-text-fill: #CCFFCC;
+	-fx-text-fill: #FFCCB3;
 }
  
  
 /* Support pane */
 #pnlSupport {
-	-fx-background-color: #800080;
+	-fx-background-color: #336633;
 }
 
 #pnlSupport .hyperlink {
-	-fx-text-fill: #CCFFCC;
+	-fx-text-fill: #FFCCB3;
 	-fx-border-color: transparent;
     -fx-padding: 4 0 4 0;
     -fx-underline: false;
@@ -228,7 +228,7 @@
 }
 
 .paneHeader {
-	-fx-text-fill: #00FF00;
+	-fx-text-fill: #FFCC66;
 	-fx-font-size: 16px;
 }
 
