Made some changes so console will work with lightmode. Also removed som stuff i did before/during demo

--- a/src/main/resources/zenit/console/ConsolePane.fxml
+++ b/src/main/resources/zenit/console/ConsolePane.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.text.Text?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<AnchorPane id="rootNode" fx:id="rootNode" prefHeight="300.0" prefWidth="700.0" style="-fx-background-color: #333;" stylesheets="@consoleStyle.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.zenit.console.ConsoleController">
+<AnchorPane id="rootNode" fx:id="rootNode" prefHeight="300.0" prefWidth="700.0" stylesheets="@consoleStyle.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.zenit.console.ConsoleController">
    <children>
-      <AnchorPane fx:id="rootAnchor" layoutY="33.0" prefHeight="300.0" prefWidth="700.0" style="-fx-background-color:#444" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="32.0">
+      <AnchorPane id="rootAnchor" fx:id="rootAnchor" layoutY="33.0" prefHeight="300.0" prefWidth="700.0"  AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="32.0">
          <children>
             <Text layoutX="291.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" AnchorPane.topAnchor="30.0">
                <font>
@@ -19,7 +19,7 @@
                </font>
             </Text>
          </children></AnchorPane>
-      <AnchorPane layoutX="2.0" layoutY="2.0" minHeight="20.0" prefHeight="32.0" prefWidth="698.0" style="-fx-background-color: #333;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="2.0" layoutY="2.0" minHeight="20.0" prefHeight="32.0" prefWidth="698.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Button id="btn" fx:id="btnConsole" layoutX="23.0" layoutY="5.0" onMouseClicked="#showConsoleTabs" prefHeight="0.0" stylesheets="@consoleStyle.css" text="CONSOLE" textFill="#666666">
                <cursor>
@@ -61,7 +61,7 @@
                   <Cursor fx:constant="HAND" /> 
                </cursor>
 	        </Button>
-	        <FontIcon  fx:id="iconCloseConsoleInstance" layoutX="6.0" layoutY="22.0" AnchorPane.rightAnchor="35.0" 
+	        <FontIcon fx:id="iconCloseConsoleInstance" layoutX="6.0" layoutY="22.0" AnchorPane.rightAnchor="35.0" 
 	        	iconLiteral="fa-trash" iconColor="#666" iconSize="17">
 				<cursor>
                   <Cursor fx:constant="HAND" /> 
