--- a/src/main/resources/zenit/console/consoleStyleLight.css
+++ b/src/main/resources/zenit/console/consoleStyleLight.css
@@ -66,4 +66,17 @@
 	-fx-background-color:#989898;
 }
 
+#btnIcon{
+	-fx-icon-color:#989898;
+}
+
+#btnIcon:hover{
+	-fx-icon-color:#666;
+}
+
+#iconTerminate{
+	-fx-icon-color:#989898;
+}
+
+
 
