forgot to open console when runing a file ( when it was closed), fixed now

--- a/src/main/resources/zenit/console/consoleStyleLight.css
+++ b/src/main/resources/zenit/console/consoleStyleLight.css
@@ -47,7 +47,7 @@
 #btn{
 	 -fx-font-family: "Consolas", 'Courier New', monospace;
 	 -fx-background-color:transparent;
-	 -fx-text-fill:#cdcdcd;
+	 -fx-text-fill:black;
 }
 
 #btn:hover{
